added page for add google credentials

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -143,3 +143,32 @@ button.sendMsg {
 }
 .msgData ul li a{margin-right:10px;background: #ffd600;border-radius: 4px;margin-bottom: 10px;padding: 0 5px;max-height: 30px; overflow: auto;}
 .hero-browser-inner.is-revealing{display:none}
+#changeGoogleCrenditials {
+    font-size: 10px;
+    padding: 0;
+    margin: 0 auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: #fff;
+    padding: 5px;
+    background: linear-gradient(65deg, #1777ed 0, #4e95f0 100%);
+    line-height: 15px;
+    box-shadow: 0 6px 15px rgba(32,43,54,0.12);
+    cursor: pointer;
+}
+#saveCredentials {
+    background: linear-gradient(65deg, #1777ed 0, #4e95f0 100%);
+    box-shadow: 0 6px 15px rgba(32,43,54,0.12);
+    border: none;
+    padding: 2px 16px;
+    line-height: 29px;
+    color: #fff;
+}
+.description {
+    margin-top: 50px;
+    line-height: 20px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+}
