--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -142,6 +142,7 @@ button.sendMsg {
     overflow-y: auto;
 }
 .msgData ul li a{margin-right:10px;background: #ffd600;border-radius: 4px;margin-bottom: 10px;padding: 0 5px;max-height: 30px; overflow: auto;}
+.hero-browser-inner.is-revealing{display:none}
 #changeGoogleCrenditials {
     font-size: 10px;
     padding: 0;
@@ -170,4 +171,8 @@ button.sendMsg {
     width: 100%;
     position: absolute;
     left: 0;
+}
+p.samples {
+    font-size: 13px;
+    font-weight: bold;
 }
